# iron-monk

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  integrations.yml  publish.yml
advanced/: index.html
advanced/asymmetric_validation/: index.html
advanced/cross_field/: index.html
advanced/customization/: index.html
advanced/execution/: index.html
advanced/framework_integration/: index.html
advanced/logical/: index.html
api_reference/: index.html
benchmarks/: index.html
constraints/: index.html
core_concepts/: index.html
docs/: advanced.md  api_reference.md  benchmarks.md  constraints.md  core_concepts.md  examples.md  index.md
docs/advanced/: asymmetric_validation.md  cross_field.md  customization.md  execution.md  framework_integration.md  logical.md
docs/examples/: app_config.md  beartype.md  sqlalchemy.md  starlette.md  strawberry.md  tortoise_orm.md  tyro.md
examples/: app_config.py  cli_tyro.py  index.html  starlette_api.py
examples/app_config/: index.html
examples/beartype/: index.html
examples/sqlalchemy/: index.html
examples/starlette/: index.html
examples/strawberry/: context_validation.py  index.html  inputs_and_mutations.py
examples/tortoise_orm/: index.html
examples/tyro/: index.html
search/: search_index.json
src/monk/: __init__.py  config.py  constraints.py  decorators.py  exceptions.py  operations.py  protocols.py  py.typed  types.py
support/: benchmark.py
tests/: test_collections.py  test_core.py  test_cross_field.py  test_dict.py  test_formats.py  test_functions.py  test_nested_models.py  test_networking.py  test_numeric.py  test_refs.py  test_streams.py  test_strings.py
tests_integration/: test_beartype.py  test_frameworks.py  test_sqlalchemy.py  test_starlette.py  test_strawberry.py  test_tortoise.py  test_tyro.py
