[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iron-monk"
version = "0.8.0"
description = "A minimalist, zero-coercion validation library for Python."
readme = "README.md"
authors = [
    {name = "Kai Benevento", email = "benesgarage.dev@gmail.com"}
]
license = "MIT"
requires-python = ">=3.11"
dependencies = []
keywords = ["validation", "dataclass", "typing", "strict", "types"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy", "ruff", "build", "mkdocs-material", "anyio"]

[project.urls]
Repository = "https://github.com/benesgarage/iron-monk"
Issues = "https://github.com/benesgarage/iron-monk/issues"
Documentation = "https://benesgarage.github.io/iron-monk/"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
